Topic list bug fixes for v2.3.0.beta2

--- a/scss/common/_form-select-kit.scss
+++ b/scss/common/_form-select-kit.scss
@@ -343,6 +343,7 @@
       border: 0;
       font-size: ($btn-font-size - 1) !important;
       margin-left: $spacer-x-inline;
+      padding-left: 0;
     }
 
     .d-button-label {
