Convert far eye slash to md visibility off

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -218,7 +218,8 @@
   @include material-icons('visibility');
 }
 
-.fa-eye-slash {
+.fa-eye-slash,
+.fa-far-eye-slash {
   @include material-icons('visibility_off');
 }
 
