Reset styles for badge icon in dropdown

--- a/scss/common/_form-select-kit.scss
+++ b/scss/common/_form-select-kit.scss
@@ -363,6 +363,11 @@
   .select-kit-row {
     line-height: inherit;
 
+    .badge-wrapper .badge-category .d-icon {
+      color: inherit;
+      margin-right: $chip-inner-spacer-x;
+    }
+
     .d-icon {
       margin-right: $dropdown-inner-spacer-x;
     }
