Fix topic bulk actions modal for v2.3.0.beta2

--- a/scss/common/_modal.scss
+++ b/scss/common/_modal.scss
@@ -607,6 +607,7 @@
 .modal-inner-container {
   margin-top: $header-height;
   margin-bottom: $header-height;
+  padding: 0;
 
   .inline-modal & {
     border: 0;
