Fix about page for v2.3.0.beta2

--- a/scss/common/_about.scss
+++ b/scss/common/_about.scss
@@ -6,6 +6,7 @@ section {
       display: flex;
       flex-wrap: wrap;
       margin-right: ($spacer-x * -1);
+      margin-bottom: 0;
     }
 
     h3 {
