Fix Avatar [CRITICAL]
Fixes avatar behind topic card while visiting the topic.

--- a/scss/common/_topic-post.scss
+++ b/scss/common/_topic-post.scss
@@ -536,6 +536,7 @@ section {
   top: $card-padding-y;
   left: $card-padding-x;
   width: $card-avatar-size;
+  z-index: 4 !important;
 
   .avatar {
     height: $card-avatar-size;
