--- a/scss/common/_header.scss
+++ b/scss/common/_header.scss
@@ -14,6 +14,7 @@
   margin-bottom: $spacer-y;
   min-height: $header-height;
   padding: $header-padding-y 0;
+  background-color: white !important;
 
   .docked & {
     margin-bottom: 0;
