Fix broken badge in menu panel in v2.3.0.beta8

--- a/scss/common/_menu-panel.scss
+++ b/scss/common/_menu-panel.scss
@@ -85,6 +85,10 @@ div {
     }
   }
 
+  .badge-notification {
+    vertical-align: top;
+  }
+
   .category-links,
   .menu-links {
     margin-right: ($menu-panel-padding-x / -2);
