--- a/scss/common/_badge.scss
+++ b/scss/common/_badge.scss
@@ -9,6 +9,11 @@
   min-height: ($font-size-base * $line-height-base);
   min-width: ($font-size-base * $line-height-base);
   padding: 0;
+
+  &.flagged-posts,
+  &.reviewables {
+    min-width: ($font-size-base * $line-height-base);
+  }
 }
 
 .badge-group {
