Fix dropdown icon colour

--- a/scss/common/_dropdown.scss
+++ b/scss/common/_dropdown.scss
@@ -78,9 +78,9 @@
       color: inherit;
     }
 
-    .fa {
-      color: color-chooser($white-secondary, $black-secondary);
+    .d-icon {
       margin-right: $dropdown-inner-spacer-x;
+      opacity: $nav-link-opacity;
     }
   }
 
